# fetchext

./: .gitignore  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CNAME  Dockerfile  Makefile  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  sitemap.xml  smoke_test.sh  ublock_origin-1.68.0.xpi.json
.github/: copilot-instructions.md  feature-blacklist.md
.github/workflows/: ci.yml  docker.yml  docs.yml  publish.yml
analysis/: index.html
api/: fetchext.html  search.js
benchmarks/: run.py
changelog/: index.html
cli/: index.html
completions/: fext.zsh
configuration/: index.html
contributing/: index.html
deployment/: index.html
docs/: CNAME  analysis.md  cli.md  configuration.md  contributing.md  deployment.md  index.md  installation.md  library.md  migration.md  packer.md  plugins.md  tui.md
docs/api/: index.html
docs/completions/: fext.bash  fext.zsh
installation/: index.html
man/: fext.1
migration/: index.html
packer/: index.html
plans/: 001_metadata_sidecars.md  002_auto_extraction.md  v0.5.0_01_crx_parsing.md  v0.5.0_02_network_resilience.md  v0.5.0_04_verbose_quiet.md  v0.5.0_05_ua_rotation.md  v0.7.0-permission-risk.md  v0.7.0-signature-verification.md  v0.7.0-source-preview.md  v0.8.0-dependency-scanner.md  v0.8.0-local-update-server.md  v0.8.0-plugin-hooks.md  v0.8.0-rate-limiting.md  v0.9.0-interactive-tui.md  v0.9.0_05_csv_export.md  v1.0.0_02_fuzz_testing.md  v1.1.0_01_complexity_analysis.md  v1.1.0_02_locale_inspector.md  v1.1.0_04_pre_commit_hook.md  v1.1.0_05_permission_explainer.md  v1.2.0_01_entropy_analysis.md  v1.2.0_02_domain_extractor.md  v1.2.0_03_yara_rules.md  v1.2.0_04_config_management.md  v1.2.0_05_cache_management.md  v1.3.0_03_history_tracking.md  v1.3.0_04_json_schema.md  v1.3.0_05_plugin_manager.md  v1.4.0_02_local_server.md  v1.4.0_04_image_optimizer.md  v1.4.0_05_interactive_tutorial.md  v1.5.0_01_cli_modularization.md  v1.5.0_02_unified_exception_handling.md  v1.5.0_03_config_validation.md  v1.5.0_04_path_standardization.md  v1.5.0_05_logging_standardization.md  v1.6.0_03_performance_optimization.md  v1.6.0_04_yara_integration.md  v1.6.0_05_risk_scoring.md  v1.7.0_04_disk_space_safety.md  (+6 more)
plans/v0.3.0/: 003_extract_command.md
plans/v0.5.0/: v0.5.0_03_config_file.md
plans/v0.6.0/: v0.6.0_01_library_mode.md  (+2 more)
plugins/: index.html
prompts/: actions-debugging.md  implementation-loop.md  roadmap-review.md
scripts/: gen_completion.py  gen_man.py
search/: search_index.json
tests/: batch_list.txt
tui/: index.html
(+394 files in other folders)
